updated, PageDescription changes, landing page buttons

--- a/src/pages/basics/ai.mdx
+++ b/src/pages/basics/ai.mdx
@@ -5,9 +5,11 @@ title: "AI"
 import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 <PageDescription>
+
   These are technical guides for non-technical people. Whether you’ve found yourself in need of knowing AI or have always been curious to learn more, this will teach you enough to dive deeper into the vast and deep AI ocean.
-  <br/><br/>
+
   Inspired by Reddit’s “Explain Like I’m 5,” these succinctly break down complicated topics without relying on technical jargon.
+
 </PageDescription>
 
 Read time | *5 mins*
@@ -75,6 +77,6 @@ This is helpful in cases where specifying rigid rules (i.e. writing algorithms
 Some helpful people at MIT created a flowchart that guides you through whether or not the thing you're looking at is, in fact, AI. You can find it here.
 
 ##### See for yourself
- - [Watson Assistant](#)
+ - [Watson Assistant](https://www.ibm.com/cloud/watson-assistant/)
  - [This person does not exist](https://thispersondoesnotexist.com/)
  - [Boston Dynamics robotics](https://www.youtube.com/watch?v=tf7IEVTDjng)
