--- a/src/pages/basics/data.mdx
+++ b/src/pages/basics/data.mdx
@@ -5,9 +5,11 @@ title: "Data"
 import { AnchorLinks, PageDescription } from "gatsby-theme-carbon";
 
 <PageDescription>
+
   These are technical guides for non-technical people. Whether you’ve found yourself in need of knowing AI or have always been curious to learn more, this will teach you enough to dive deeper into the vast and deep AI ocean.
-  <br/><br/>
+
   Inspired by Reddit’s “Explain Like I’m 5,” these succinctly break down complicated topics without relying on technical jargon.
+
 </PageDescription>
 
 Read time | *5 mins*
@@ -18,7 +20,7 @@ Read time | *5 mins*
 
 Despite being critical to the AI equation, data often gets overlooked or minimized—often at enormous costs. It takes hard work to get data to the point where it’s usable for AI, but ultimately it comes down to hitting two big checkboxes: quantity and quality. 
 
-Before taking the AI plunge, you need to have the right data and enough of it. This includes acquiring data, cleaning it, filling in the gaps, and in a majority of cases taking additional steps to render it useful. Those familiar with Rob Thomas' AI ladder will note that this takes place in the "Collect" and "Organize" steps.
+Before taking the AI plunge, you need to have the right data and enough of it. This includes acquiring data, cleaning it, filling in the gaps, and in a majority of cases taking additional steps to render it useful. Those familiar with [Rob Thomas' AI Ladder](https://video.cube365.net/c/910697) will note that this takes place in the "Collect" and "Organize" steps.
 
 What follows are several of the key considerations with respect to collecting and using data.
  
