--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -5,10 +5,11 @@ title: "ML"
 import { AnchorLinks, Column, PageDescription, Row, Video } from "gatsby-theme-carbon";
 
 <PageDescription>
-  Add-on repositories, or repos, are components built for a specific product or
-  experience. The repos are built on top of the core Carbon repo, and enable
-  teams to create their own custom components that follow Carbon's visual style
-  and guidelines.
+
+  These are technical guides for non-technical people. Whether you’ve found yourself in need of knowing AI or have always been curious to learn more, this will teach you enough to dive deeper into the vast and deep AI ocean.
+
+  Inspired by Reddit’s “Explain Like I’m 5,” these succinctly break down complicated topics without relying on technical jargon.
+
 </PageDescription>
 
 Read time | *7 mins*
