--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -5,17 +5,12 @@ title: "Ethics"
 import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
 
 <PageDescription>
-  This document represents the beginning of a conversation defining Everyday Ethics for AI. Ethics must be embedded into the design and development process from the very beginning of AI creation.
-  <br/><br/>This is meant to stimulate ideas and provoke thought. The idea here is to start simple and iterate. Rather than strive for perfection first, we’re releasing this to allow all who read and use this to comment, critique and participate in all future iterations. So please experiment, play, use, and break what you find here and send us your feedback. Designers and developers of AI systems are encouraged to be aware of these concepts and seize opportunities to intentionally put these ideas into practice.
-</PageDescription>
 
-<AnchorLinks>
-  <AnchorLink href={"#"}>Accountability</AnchorLink>
-  <AnchorLink href={"#"}>Value Alignment</AnchorLink>
-  <AnchorLink href={"#"}>Explainability</AnchorLink>
-  <AnchorLink href={"#"}>Fairness</AnchorLink>
-  <AnchorLink href={"#"}>User Data Rights</AnchorLink>
-</AnchorLinks>
+  This document represents the beginning of a conversation defining Everyday Ethics for AI. Ethics must be embedded into the design and development process from the very beginning of AI creation.
+
+  This is meant to stimulate ideas and provoke thought. The idea here is to start simple and iterate. Rather than strive for perfection first, we’re releasing this to allow all who read and use this to comment, critique and participate in all future iterations. So please experiment, play, use, and break what you find here and send us your feedback. Designers and developers of AI systems are encouraged to be aware of these concepts and seize opportunities to intentionally put these ideas into practice.
+
+</PageDescription>
 
 <Row>
 <Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
