--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,55 +6,102 @@ export default HomepageTemplate;
 
 
 <Row className="getting-started">
-<Column colMd={4} colLg={4} noGutterSm>
+<Column colSm={4} colMd={4} colLg={4} noGutterSm>
 
 ##### Getting Started
 
 </Column>
 
-<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
+<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
     <ResourceCard
       className={'card'}
       title="Fundamentals"
       actionIcon="arrowRight"
       aspectRatio="1:1"
       href="/fundamentals"
-      dark />
+      color={'dark'} />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
+<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
     <ResourceCard
       className={'card'}
       title="Ethics"
       actionIcon="arrowRight"
       aspectRatio="1:1"
       href="/ethics/overview"
-      dark />
+      color={'dark'} />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
+<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
     <ResourceCard
       className={'card'}
       title="Basics"
       actionIcon="arrowRight"
       aspectRatio="1:1"
       href="/basics/overview"
-      dark />
+      color={'dark'} />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
+<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
     <ResourceCard
       className={'card'}
       title="EDT+AI"
       actionIcon="arrowRight"
       aspectRatio="1:1"
       href="/edt-ai"
-      dark />
+      color={'dark'} />
 </Column>
-<Column colMd={3} colLg={4} noGutterSm className={'temp'}>
+<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
     <ResourceCard
       className={'card'}
       title="Resources"
       actionIcon="arrowRight"
       aspectRatio="1:1"
       href="/resources"
-      dark />
+      color={'dark'} />
+</Column>
+
+
+<Column colSm={4} noGutterSm className={'temp show-on-small'}>
+    <ResourceCard
+      className={'card'}
+      title="Fundamentals"
+      actionIcon="arrowRight"
+      aspectRatio="2:1"
+      href="/fundamentals"
+      color={'dark'} />
+</Column>
+<Column colSm={4} noGutterSm className={'temp show-on-small'}>
+    <ResourceCard
+      className={'card'}
+      title="Ethics"
+      actionIcon="arrowRight"
+      aspectRatio="2:1"
+      href="/ethics/overview"
+      color={'dark'} />
+</Column>
+<Column colSm={4} noGutterSm className={'temp show-on-small'}>
+    <ResourceCard
+      className={'card'}
+      title="Basics"
+      actionIcon="arrowRight"
+      aspectRatio="2:1"
+      href="/basics/overview"
+      color={'dark'} />
+</Column>
+<Column colSm={4} noGutterSm className={'temp show-on-small'}>
+    <ResourceCard
+      className={'card'}
+      title="EDT+AI"
+      actionIcon="arrowRight"
+      aspectRatio="2:1"
+      href="/edt-ai"
+      color={'dark'} />
+</Column>
+<Column colSm={4} noGutterSm className={'temp show-on-small'}>
+    <ResourceCard
+      className={'card'}
+      title="Resources"
+      actionIcon="arrowRight"
+      aspectRatio="2:1"
+      href="/resources"
+      color={'dark'} />
 </Column>
 </Row>
