--- a/src/pages/edt-ai/index.mdx
+++ b/src/pages/edt-ai/index.mdx
@@ -5,10 +5,9 @@ title: EDT+AI
 import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
 
 <PageDescription>
-  Eventually this will be the blurb for EDT+AI, but until now these are just
-  words to fill the space but honestly aren't all of our words just words to
-  fill the gap between conception and infinite nothingness just some food for
-  thought happy monday
+
+  Eventually this will be the blurb for EDT+AI, but until now these are just words to fill the space but honestly aren't all of our words just words to fill the gap between conception and infinite nothingness just some food for thought happy monday
+
 </PageDescription>
 
 <AnchorLinks>
@@ -25,7 +24,7 @@ import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Vi
 </Column>
 </Row>
 
-<Row style={{ padding-top: '20px'}}>
+<Row>
 <Column colSm={12} colMd={12} colLg={12}>
 
 <Video title="Test" vimeoId="235672083" />
