video appears to work, footer, small design tings

--- a/src/pages/fundamentals/index.mdx
+++ b/src/pages/fundamentals/index.mdx
@@ -81,17 +81,38 @@ These systems learn at scale, reason with purpose and interact with humans natur
 
 ### We characterize cognitive systems as having four main qualities:
 
+<Row>
+<Column colLg={4}>
+
 ##### Understands
 AI deeply understands its domain. They do this primarily through data – structured and unstructured, text-based or sensory – in context and meaning, at speed and volume.
+
+</Column>
+
+<Column colLg={4}>
 
 ##### Reasons
 AI reasons towards specific goals. They have the ability to form hypotheses by making considered arguments and prioritized recommendations to help humans make better decisions.
 
+</Column>
+</Row>
+
+<Row>
+<Column colLg={4}>
+
 ##### Learns
 AI learns continuously through experience. They ingest and accumulate data and insight from every interaction at all times. They are trained, not programmed, by experts who enhance, scale and accelerate their expertise. Therefore, these systems get better over time.
 
+</Column>
+
+<Column colLg={4}>
+
 ##### Interacts
 AI interacts naturally with people and systems. The interaction model of an AI is expected to flow unobtrusively while continuously building a sustainable relationship between itself and its users.
+
+</Column>
+</Row>
+
 
 ## Design Factors for Artificial Intelligence
 When it comes to designing for AI, our focus must be unwavering in providing experiences that put the user above all else.
@@ -159,11 +180,17 @@ Human augments the machine and the machine augments the human.
 ## AI Ecosystem
 Artificial intelligences are probabilistic systems. This means that they are taught instead of being programmed. Since the systems are being taught, they must have context to be able to utilize their learnings. An AI needs this context to understand its place and provide value.
 
+<Row>
+<Column colLg={6}>
+
 ##### Human
 The person whose needs are ultimately being served
 
 ##### Machine
 The system and its network of embodiments & connections
+
+</Column>
+<Column colLg={6}>
 
 ##### Business
 The business needs and market goals to be served by the system
@@ -171,8 +198,12 @@ The business needs and market goals to be served by the system
 ##### World
 The external factors that will both inform and educate the system
 
+</Column>
+</Row>
+
 ##### Context
 The holistic view of a complete human experience. Includes emotional, physical, system, and domain knowledge.
+
 
 <Row>
 <Column colLg={6}>
