--- a/src/pages/basics/ml.mdx
+++ b/src/pages/basics/ml.mdx
@@ -138,3 +138,4 @@ People are deathly serious about their money, especially when it's their job. Th
  - Watson Natural Language Understanding
  - Watson Tone Analyzer
  - MIT Deepmoji 
+ - [A visual introduction to machine learning](http://www.r2d3.us/visual-intro-to-machine-learning-part-1/)
