--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,107 +1,80 @@
 import HomepageTemplate from 'gatsby-theme-carbon/src/templates/Homepage';
-import { Column, ResourceCard, Row, Video } from "gatsby-theme-carbon";
+import { Column, ImageCard, Row, Video } from "gatsby-theme-carbon";
 import './home.scss';
 
 export default HomepageTemplate;
 
 
-<Row className="getting-started">
-<Column colSm={4} colMd={4} colLg={4} noGutterSm>
-
-##### Getting Started
-
-</Column>
-
-<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
-    <ResourceCard
-      className={'card'}
+<Row className={"getting-started"}>
+  <Column colMd={4} colLg={4} noGutterSm>
+    <ImageCard
+      className="card"
       title="Fundamentals"
-      actionIcon="arrowRight"
-      aspectRatio="1:1"
       href="/fundamentals"
-      color={'dark'} />
-</Column>
-<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="Ethics"
+      aspectRatio="1:1"
+      titleColor="dark"
       actionIcon="arrowRight"
+      iconColor="dark"
+      >
+
+![](../images/Fundamentals.png)
+
+  </ImageCard>
+  <ImageCard
+    className="card"
+    title="Basics"
+    aspectRatio="1:1"
+    href="/basics/overview"
+    hoverColor="dark"
+    titleColor="light"
+    actionIcon="arrowRight"
+    >
+
+![](../images/Basics.png)
+
+  </ImageCard>
+</Column>
+
+<Column colMd={4} colLg={4} noGutterSm>
+    <ImageCard
+      className="card"
+      title="Ethics"
       aspectRatio="1:1"
       href="/ethics/overview"
-      color={'dark'} />
-</Column>
-<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="Basics"
       actionIcon="arrowRight"
-      aspectRatio="1:1"
-      href="/basics/overview"
-      color={'dark'} />
-</Column>
-<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="EDT+AI"
-      actionIcon="arrowRight"
-      aspectRatio="1:1"
-      href="/edt-ai"
-      color={'dark'} />
-</Column>
-<Column colMd={4} colLg={4} noGutterSm className={'temp hide-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="Resources"
-      actionIcon="arrowRight"
-      aspectRatio="1:1"
-      href="/resources"
-      color={'dark'} />
-</Column>
+      >
+
+![](../images/Ethics.png)
 
 
-<Column colSm={4} noGutterSm className={'temp show-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="Fundamentals"
+  </ImageCard>
+      <ImageCard
+        className="card"
+      title="Conversation"
+      titleColor="light"
+      aspectRatio="1:1"
+      href="/conversation/overview"
       actionIcon="arrowRight"
-      aspectRatio="2:1"
-      href="/fundamentals"
-      color={'dark'} />
+      hoverColor="dark"
+      >
+
+![](../images/Conversation.png)
+
+  </ImageCard>
 </Column>
-<Column colSm={4} noGutterSm className={'temp show-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="Ethics"
+
+<Column colMd={4} colLg={4} noGutterSm>
+    <ImageCard
+      className="card"
+      title="Team Essentials for AI"
+      aspectRatio="1:2"
+      href="/team-essentials-for-ai"
       actionIcon="arrowRight"
-      aspectRatio="2:1"
-      href="/ethics/overview"
-      color={'dark'} />
-</Column>
-<Column colSm={4} noGutterSm className={'temp show-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="Basics"
-      actionIcon="arrowRight"
-      aspectRatio="2:1"
-      href="/basics/overview"
-      color={'dark'} />
-</Column>
-<Column colSm={4} noGutterSm className={'temp show-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="EDT+AI"
-      actionIcon="arrowRight"
-      aspectRatio="2:1"
-      href="/edt-ai"
-      color={'dark'} />
-</Column>
-<Column colSm={4} noGutterSm className={'temp show-on-small'}>
-    <ResourceCard
-      className={'card'}
-      title="Resources"
-      actionIcon="arrowRight"
-      aspectRatio="2:1"
-      href="/resources"
-      color={'dark'} />
+      hoverColor="dark"
+      >
+
+![](../images/Team-Essentials.png)
+
+  </ImageCard>
 </Column>
 </Row>
