--- a/src/pages/team-essentials-for-ai/index.mdx
+++ b/src/pages/team-essentials-for-ai/index.mdx
@@ -2,18 +2,13 @@
 title: Team Essentials for AI
 ---
 
-import { AnchorLink, AnchorLinks, Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
+import { Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
 
 <PageDescription>
 
   Eventually this will be the blurb for EDT+AI, but until now these are just words to fill the space but honestly aren't all of our words just words to fill the gap between conception and infinite nothingness just some food for thought happy monday
 
 </PageDescription>
-
-<AnchorLinks>
-  <AnchorLink href={"#"}>Issa</AnchorLink>
-  <AnchorLink href={"#"}>Link</AnchorLink>
-</AnchorLinks>
 
 <Row>
 <Column colMd={2} colMd={3} colLg={4}>
