slight copy, new video

--- a/src/pages/team-essentials-for-ai/index.mdx
+++ b/src/pages/team-essentials-for-ai/index.mdx
@@ -6,7 +6,7 @@ import { Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-
 
 <PageDescription>
 
-  Eventually this will be the blurb for EDT+AI, but until now these are just words to fill the space but honestly aren't all of our words just words to fill the gap between conception and infinite nothingness just some food for thought happy monday
+  Eventually this will be the blurb for Team Essentials for AI, but until now these are just words to fill the space but honestly aren't all of our words just words to fill the gap between conception and infinite nothingness just some food for thought happy monday
 
 </PageDescription>
 
@@ -14,8 +14,8 @@ import { Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-
 <Column colMd={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
-  subTitle={'Subtitle'}
-  title={'Title'} />
+  subTitle={'Activity'}
+  title={'AI Handbook'} />
 </Column>
 </Row>
 
