team essentials for ai and basics overview content and styling

--- a/src/pages/basics/overview.mdx
+++ b/src/pages/basics/overview.mdx
@@ -14,16 +14,14 @@ import Feedback from "../../components/Feedback/Feedback"
 
 </PageDescription>
 
-## A short blurb will go here
-
 <Row>
-<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
   title={'Title'} />
 </Column>
-<Column noGutterSm={true} colSm={2} colMd={2} colMd={3} colLg={4}>
+<Column noGutterSm={true} colSm={2} colMd={3} colLg={4}>
 <ResourceCard
   href={'ibm.com'}
   subTitle={'Subtitle'}
@@ -38,9 +36,8 @@ import Feedback from "../../components/Feedback/Feedback"
   href={'/basics/ai'}
   title={'Artificial Intelligence'}
   date={'April 2020'}
+  actionIcon={'arrowRight'}
   readTime={'5 mins'} >
-
-![test](../../images/ethics/accountability/test.png)
 
 </ArticleCard>
 </Column>
@@ -49,9 +46,8 @@ import Feedback from "../../components/Feedback/Feedback"
   href={'/basics/ml'}
   title={'Machine Learning'}
   date={'April 2020'}
+  actionIcon={'arrowRight'}
   readTime={'5 mins'} >
-
-![test](../../images/ethics/accountability/test.png)
 
 </ArticleCard>
 </Column>
@@ -60,9 +56,8 @@ import Feedback from "../../components/Feedback/Feedback"
   href={'/basics/data'}
   title={'Data'}
   date={'April 2020'}
+  actionIcon={'arrowRight'}
   readTime={'5 mins'} >
-
-![test](../../images/ethics/accountability/test.png)
 
 </ArticleCard>
 </Column>
