--- a/src/pages/team-essentials-for-ai/index.mdx
+++ b/src/pages/team-essentials-for-ai/index.mdx
@@ -3,10 +3,12 @@ title: Team Essentials for AI
 ---
 
 import { Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-carbon";
+import './team-essentials.scss';
 
 <PageDescription>
 
-  Eventually this will be the blurb for Team Essentials for AI, but until now these are just words to fill the space but honestly aren't all of our words just words to fill the gap between conception and infinite nothingness just some food for thought happy monday
+  Everyone can play a role in how their team innovates with AI.
+Teams need a diverse set of minds and skill sets to create something useful, intuitive, and responsible. These courses will give you the language, knowledge, and actionable methods to work alongside technical and non-technical members of your team to create AI solutions.
 
 </PageDescription>
 
@@ -19,7 +21,7 @@ import { Column, PageDescription, ResourceCard, Row, Video } from "gatsby-theme-
 </Column>
 </Row>
 
-<Row>
+<Row className={'video-wrapper'}>
 <Column colSm={12} colMd={12} colLg={12}>
 
 <Video title="Test" vimeoId="235672083" />
