ethics copy and overview to index

--- a/src/pages/ethics/accountability.mdx
+++ b/src/pages/ethics/accountability.mdx
@@ -9,9 +9,11 @@ import './ethics.scss';
 <Row className="opener">
 <Column colSm={3} colMd={6} colLg={7}>
 
-### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes. Human judgment plays a role throughout a seemingly objective system of logical decisions. It is humans who write algorithms, who define success or failure, who make decisions about the uses of systems and who may be affected by a system’s outcomes.
+### AI designers and developers are responsible for considering AI design, development, decision processes, and outcomes.
 
-### Every person involved in the creation of AI at any step is accountable for considering the system’s impact in the world, as are the companies invested in its development.
+### Human judgment plays a role throughout a seemingly objective system of logical decisions. It is humans who write algorithms, who define success or failure, who make decisions about the uses of systems and who may be affected by a system’s outcomes.
+
+### *Every person involved* in the creation of AI at any step *is accountable for considering the system’s impact in the world*, as are the companies invested in its development.
 
 Read time | **5 minutes**
 
@@ -34,28 +36,28 @@ Read time | **5 minutes**
 
 01
 
-Allow for questions. A user should be able to ask why an AI is doing what it's doing on an ongoing basis. This should be clear and up front in the user interface at all times
+Make company policies clear and accessible to design and development teams from day one so that no one is confused about issues of responsibility or accountability. As an AI designer or developer, *it is your responsibility to know*.
 
 </Column>
 <Column className={'recommendation'} colMd={4} colLg={4}>
 
 02
 
-Allow for questions. A user should be able to ask why an AI is doing what it's doing on an ongoing basis. This should be clear and up front in the user interface at all times
+Understand where the responsibility of the company/software ends. You may not have control over how data or a tool will be used by a user, client, or other external source.
 
 </Column>
 <Column className={'recommendation'} colMd={4} colLg={4}>
 
 03
 
-Allow for questions. A user should be able to ask why an AI is doing what it's doing on an ongoing basis. This should be clear and up front in the user interface at all times
+Keep detailed records of your design processes and decision making. Determine a strategy for keeping records during the design and development process to encourage best practices and encourage iteration.
 
 </Column>
 <Column className={'recommendation'} colMd={4} colLg={4}>
 
 04
 
-Allow for questions. A user should be able to ask why an AI is doing what it's doing on an ongoing basis. This should be clear and up front in the user interface at all times
+Adhere to your company’s business conduct guidelines. Also, understand [national and international laws, regulations, and guidelines](http://www.ohchr.org/EN/pages/home.aspx) that your AI may have to work within. You can find other related resources in the [IEEE Ethically Aligned Design document](https://ethicsinaction.ieee.org).
 
 </Column>
 </Row>
@@ -67,9 +69,8 @@ Allow for questions. A user should be able to ask why an AI is doing what it's d
 
 ## To consider
 
- - If you need somewhere to start, consider IBM’s Standards of Corporate Responsibility12 or use your company’s standards documentation.
- - Values are subjective and differ globally. Global companies must take into account language barriers and cultural differences.
- - Well-meaning values can create unintended consequences. e.g. a tailored political newsfeed provides users with news that aligns with their beliefs but does not holistically represent the gestalt.
+ - Understand the workings of your AI even if you’re not personally developing and monitoring its algorithms.
+ - Refer to secondary research by sociologists, linguists, behaviorists, and other professionals to understand ethical issues in a holistic context.
 
 
 </Column>
@@ -79,8 +80,8 @@ Allow for questions. A user should be able to ask why an AI is doing what it's d
 
 _“Nearly 50% of the surveyed developers believe that the humans creating AI should be responsible for considering the ramifications of the technology. Not the bosses. Not the middle managers. The coders.”_
 
-**Mark Wilson** <br/>
-_Fast Company7 on Stack Overflow’s Developer Survey Results 2018_
+**[Mark Wilson, Fast Company](https://www.fastcodesign.com/90164226/what-developers-really-think-about-ai-and-bias)**<br/>
+on _[Stack Overflow’s Developer Survey Results 2018](https://insights.stackoverflow.com/survey/2018/)_
 
 </Aside>
 </Column>
@@ -93,9 +94,11 @@ _Fast Company7 on Stack Overflow’s Developer Survey Results 2018_
 
 ## Questions to ask your team
 
- - Which group’s values are expressed by our AI and why?
- - How do we agree on which values to consider as a team? (For more reading on moral alignment, check here)
- - How do we change or adjust the values reflected by our AI as our values evolve over time?
+ - How does accountability change according to the levels of user influence over an AI system?
+ - Is the AI to be embedded in a human decision-making process, is it making decisions on its own, or is it a hybrid?
+ - How will our team keep records of our process?
+ - How do we keep track of ethical design choices and considerations after the launch of the AI?
+ - Will others new to our effort be able understand to our records?
 
 
 </Column>
@@ -108,9 +111,8 @@ _Fast Company7 on Stack Overflow’s Developer Survey Results 2018_
 
 ## Accountability example
 
- - The team understands that for a voice-activated assistant to work properly, it must be “always listening” for a wake word. The team makes it clear to guests that the AI hotel assistant is designed to not keep any data, or monitor guests, in both cases without their knowledge, even if it is listening for a wake word.
- - The audio collected while listening for a wake word is auto-deleted every 5 seconds. Even if a guest opts in, the AI does not actively listen in on guests unless it is called upon.
- - The team knows that this agent will be used in hotels across the world, which will require different languages and customs. They consult with linguists to ensure the AI will be able to speak in guests’ respective languages and respect applicable customs.
+ - The team utilizes design researchers to contact real guests in the hotels to understand their wants and needs through face-to-face user interviews.
+ - The team considers their own responsibility when a hotel assistant’s feedback does not meet the needs or expectations of guests. They have implemented a feedback learning loop to better understand preferences and have highlighted the ability for a guest to turn off the AI at any point during their stay.
 
 
 </Column>
