--- a/src/pages/ethics/fairness.mdx
+++ b/src/pages/ethics/fairness.mdx
@@ -52,12 +52,7 @@ include stereotyping, confirmation bias, and sunk cost bias.
 
 03
 
-Instill a feedback mechanism or open dialogue with users to
-raise awareness of user-identified biases or issues. e.g.,
-<span className="ibm-type-semibold">
-<a href="https://woebot.io">Woebot</a>
-asks “Let me know what you think,” after suggesting a link
-</span>.
+Instill a feedback mechanism or open dialogue with users to raise awareness of user-identified biases or issues. e.g. *[Woebot](https://woebot.io)* asks “Let me know what you think,” after suggesting a link.
 
 </Column>
 </Row>
@@ -85,7 +80,7 @@ asks “Let me know what you think,” after suggesting a link
 
 _“By progressing new ethical frameworks for AI and thinking critically about the quality of our datasets and how humans perceive and work with AI, we can accelerate the [AI] field in a way that will benefit everyone. IBM believes that [AI] actually holds the keys to mitigating bias out of AI systems – and offers an unprecedented opportunity to shed light on the existing biases we hold as humans.“_
 
-**Bias in AI: How we Build Fair AI Systems and Less-Biased Humans**
+**[Bias in AI: How we Build Fair AI Systems and Less-Biased Humans](https://www.ibm.com/blogs/policy/bias-in-ai/)**
 
 </Aside>
 </Column>
