--- a/src/pages/ethics/index.mdx
+++ b/src/pages/ethics/index.mdx
@@ -35,7 +35,7 @@ As AI designers and developers, we hold a vast share of the collective influence
 
 Artificial intelligence technology is rapidly growing in capability, impact and influence. As designers and developers of AI systems, it is an imperative to understand the ethical considerations of our work. A tech-centric focus that solely revolves around improving the capabilities of an intelligent system doesn't sufficiently consider human needs.
 
-An ethical, human-centric AI must be designed and developed in a manner that is aligned with the values and ethical principles of a society or the community it affects. Ethics is based on well-founded standards of right and wrong that prescribe what humans ought to do, usually in terms of rights, obligations, benefits to society, fairness, or specific virtues (Markkula Center for Applied Ethics 1).
+An ethical, human-centric AI must be designed and developed in a manner that is aligned with the values and ethical principles of a society or the community it affects. Ethics is based on well-founded standards of right and wrong that prescribe what humans ought to do, usually in terms of rights, obligations, benefits to society, fairness, or specific virtues ([Markkula Center for Applied Ethics](https://www.scu.edu/ethics/ethics-resources/ethical-decision-making/what-is-ethics/)).
 
 ### This guide provides discussion points concerning:
  - specific virtues that AI systems should possess;
@@ -57,4 +57,4 @@ These focal areas provide an intentional framework for establishing an ethical f
 
 These focal areas provide an intentional framework for establishing an ethical foundation for building and using AI systems. As much of what we do related to artificial intelligence is new territory for all of us, individuals and groups will need to further define criteria and metrics for evaluation to better allow for the detection and mitigation of any issues.
 
-The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email edethics@us.ibm.com.
+The idea here is to start simple and iterate. We’re dependent on you to experiment, play, use, and break what you find here and send us your feedback. As you work with your team and others, please share this guide with them. If you have questions, comments or suggestions please email <edethics@us.ibm.com>.
