--- a/src/pages/ethics/user-data-rights.mdx
+++ b/src/pages/ethics/user-data-rights.mdx
@@ -12,7 +12,7 @@ import './ethics.scss';
 
 ### It is your team's responsibility to keep users empowered with control over their interactions.
 
-### <a href="www.pewresearch.org/fact-tank/2016/09/21/the-state-of-privacy-in-america/">Pew Research</a> recently found that being in control of our own information is “very important” to 74% of Americans. <a href="https://ec.europa.eu/digital-single-market/en/news/eprivacy-consultations-show-confidentiality-communications-and- challenge-new-technologies-are"> The European Commission20</a> found that 71% of EU citizens find it unacceptable for companies to share information about them without their permission. These percentages will rise as AI is further used to either amplify our privacy or undermine it. Your company should be fully compliant with the applicable portions of EU’s <a href="https://www.eugdpr.org/"> General Data Protection Regulation</a> and any comparable regulations in other countries, to make sure users understand that AI is working in their best interests.
+### [Pew Research](www.pewresearch.org/fact-tank/2016/09/21/the-state-of-privacy-in-america/) recently found that being in control of our own information is “very important” to 74% of Americans. [The European Commission](https://ec.europa.eu/digital-single-market/en/news/eprivacy-consultations-show-confidentiality-communications-and-challenge-new-technologies-are) found that 71% of EU citizens find it unacceptable for companies to share information about them without their permission. These percentages will rise as AI is further used to either amplify our privacy or undermine it. Your company should be fully compliant with the applicable portions of EU’s [General Data Protection Regulation](https://www.eugdpr.org/) and any comparable regulations in other countries, to make sure users understand that AI is working in their best interests.
 
 Read time | **5 minutes**
 
@@ -79,10 +79,7 @@ creating a new AI service.
 
 06
 
-Recognize and adhere to applicable
-<a href="http://www.ohchr.org/EN/ProfessionalInterest/Pages/InternationalLaw.aspx">
-national and international rights laws</a> when designing for an AI’s
-acceptable user data access permissions.
+Recognize and adhere to applicable [national and international rights laws](http://www.ohchr.org/EN/ProfessionalInterest/Pages/InternationalLaw.aspx) when designing for an AI’s acceptable user data access permissions.
 
 </Column>
 </Row>
@@ -108,8 +105,8 @@ acceptable user data access permissions.
 
 _“Individuals require mechanisms to help curate their unique identity and personal data in conjunction with policies and practices that make them explicitly aware of consequences resulting from the bundling or resale of their personal information.”_
 
-**The IEEE Global Initiative**
-_on Ethics of Autonomous and Intelligent Systems_
+**[The IEEE Global Initiative](https://ethicsinaction.ieee.org/)**
+on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.org/)_
 
 </Aside>
 </Column>
@@ -139,7 +136,7 @@ _on Ethics of Autonomous and Intelligent Systems_
 <Row className="example">
 <Column colMd={6} colLg={7}>
 
-## User data rights example
+## Data rights example
 
  - The hotel provides guests with a consent agreement to utilize
  the AI hotel assistant before they begin using the AI’s
