--- a/src/pages/ethics/value-alignment.mdx
+++ b/src/pages/ethics/value-alignment.mdx
@@ -41,14 +41,14 @@ Consider the culture that establishes the value systems you’re designing withi
 
 02
 
-Work with design researchers to understand and reflect your users’ values. You can find out more about this process here.
+Work with design researchers to understand and reflect your users’ values. [You can find out more about this process here](https://www.ibm.com/design/research/).
 
 </Column>
 <Column colMd={4} colLg={4}>
 
 03
 
-Consider mapping out your understanding of your users’ values and aligning the AI’s actions accordingly with an Ethics Canvas. Values will be specific to certain use cases and affected communities. Alignment will allow users to better understand your AI’s actions and intents.
+Consider mapping out your understanding of your users’ values and aligning the AI’s actions accordingly with [an Ethics Canvas](https://www.ethicscanvas.org). Values will be specific to certain use cases and affected communities. Alignment will allow users to better understand your AI’s actions and intents.
 
 </Column>
 </Row>
@@ -60,9 +60,9 @@ Consider mapping out your understanding of your users’ values and aligning the
 
 ## To consider
 
- - Explainability is needed to build public confidence in disruptive technology, to promote safer practices, and to facilitate broader societal adoption.
- - There are situations where users may not have access to the full decision process that an AI might go through, e.g., financial investment algorithms.
- - Ensure an AI system’s level of transparency is clear. Users should stay generally informed on the AI's intent even when they can't access a breakdown of the AI's process.
+ - If you need somewhere to start, consider [IBM’s Standards of Corporate Responsibility](https://www.ibm.com/ibm/responsibility/2015/at_a_glance/our_approach.html) or use your company’s standards documentation.
+ - Values are subjective and differ globally. Global companies must take into account language barriers and cultural differences.
+ - Well-meaning values can create unintended consequences. e.g. *a tailored political newsfeed provides users with news that aligns with their beliefs but does not holistically represent the gestalt*.
 
 
 </Column>
@@ -72,8 +72,8 @@ Consider mapping out your understanding of your users’ values and aligning the
 
 _“If machines engage in human communities as autonomous agents, then those agents will be expected to follow the community’s social and moral norms. <br/> A necessary step in enabling machines to do so is to identify these norms. But whose norms?”_
 
-** The IEEE Global Initiative ** <br/>
-_on Ethics of Autonomous and Intelligent Systems_
+** [The IEEE Global Initiative](https://ethicsinaction.ieee.org) **<br/>
+on _[Ethics of Autonomous and Intelligent Systems](https://ethicsinaction.ieee.org)_
 
 </Aside>
 </Column>
@@ -86,9 +86,9 @@ _on Ethics of Autonomous and Intelligent Systems_
 
 ## Questions to ask your team
 
- - How do we build explainability into our experience without detracting from user experience or distracting from the task at hand?
- - Do certain processes or pieces of information need to be hidden from users for security or IP reasons? How is this explained to users?
- - Which segments of our AI decision processes can be articulated for users in an easily digestible and explainable fashion?
+ - Which group’s values are expressed by our AI and why?
+ - How do we agree on which values to consider as a team? (For more reading on moral alignment, [check here](http://faculty.mtsac.edu/cmcgruder/moraljudgements.html).)
+ - How do we change or adjust the values reflected by our AI as our values evolve over time? 
 
 
 </Column>
@@ -99,10 +99,11 @@ _on Ethics of Autonomous and Intelligent Systems_
 <Row className="example">
 <Column colMd={6} colLg={7}>
 
-## Accountability example
+## Value alignment example
 
- - The team utilizes design researchers to contact real guests in the hotels to understand their wants and needs through face-to-face user interviews.
- - The team considers their own responsibility when a hotel assistant’s feedback does not meet the needs or expectations of guests. They have implemented a feedback learning loop to better understand preferences and have highlighted the ability for a guest to turn off the AI at any point during their stay.
+ - The team understands that for a voice-activated assistant to work properly, it must be “always listening” for a wake word. The team makes it clear to guests that the AI hotel assistant is designed to not keep any data, or monitor guests, in both cases without their knowledge, even if it is listening for a wake word.
+ - The audio collected while listening for a wake word is auto-deleted every 5 seconds. Even if a guest opts in, the AI does not *actively* listen in on guests unless it is called upon.
+ - The team knows that this agent will be used in hotels across the world, which will require different languages and customs. They consult with linguists to ensure the AI will be able to speak in guests’ respective languages and respect applicable customs.
 
 
 </Column>
