--- a/src/pages/ethics/explainability.mdx
+++ b/src/pages/ethics/explainability.mdx
@@ -76,13 +76,9 @@ decision processes.
 
 ## To consider
 
- - Explainability is needed to build public confidence in
- disruptive technology, to promote safer practices, and to
- facilitate broader societal adoption.
- - There are situations where users may not have access to the full
- decision process that an AI might go through, e.g.,
- <span className="ibm-type-italic">financial investment
- algorithms</span>.
+ - Explainability is needed to build public confidence in disruptive technology, to promote safer practices, and to facilitate broader societal adoption.
+ - There are situations where users may not have access to the full decision process that an AI might go through, e.g. *financial investment algorithms*.
+ - Ensure an AI system’s level of transparency is clear. Users should stay generally informed on the AI's intent even when they can't access a breakdown of the AI's process. 
 
 
 </Column>
@@ -92,7 +88,7 @@ decision processes.
 
 _“IBM supports transparency and data governance policies that will ensure people understand how an AI system came to a given conclusion or recommendation. Companies must be able to explain what went into their algorithm’s recommendations. If they can’t, then their systems shouldn’t be on the market.“_
 
-**Data Responsibility at IBM**
+**[Data Responsibility at IBM](https://www.ibm.com/blogs/policy/dataresponsibility-at-ibm/)**
 
 </Aside>
 </Column>
@@ -125,21 +121,9 @@ _“IBM supports transparency and data governance policies that will ensure peop
 
 ## Explainability example
 
- - Per GDPR (<a href="https://martechtoday.com/guide/gdpr-the-general-data-protection-regulation">
- General Data Protection Regulation</a>), a guest must
- explicitly opt in to use the hotel room assistant. Additionally,
- they will be provided with a transparent UI to show how the AI
- makes its recommendations and suggestions.
- - A researcher on the team, through interviews with hotel guests,
- understands that the guests want a way to opt into having their
- personal information stored. The team enables a way for the AI
- to provide guests (through voice or graphic UI) with options and
- the ability for the system to gather pieces of information with
- consent.
- - With permission, the AI offers recommendations for places to
- visit during their stay. Guests can ask why these
- recommendations are made and which set of data is being utilized
- to make them.
+ - Per GDPR ([General Data Protection Regulation](https://martechtoday.com/guide/gdpr-the-general-data-protection-regulation)), a guest must explicitly **opt in** to use the hotel room assistant. Additionally, they will be provided with a transparent UI to show how the AI makes its recommendations and suggestions.
+ - A researcher on the team, through interviews with hotel guests, understands that the guests want a way to opt into having their personal information stored. The team enables a way for the AI to provide guests (through voice or graphic UI) with options and the ability for the system to gather pieces of information with consent.
+ - With permission, the AI offers recommendations for places to visit during their stay. Guests can ask why these recommendations are made and which set of data is being utilized to make them.
 
 
 </Column>
